# steamworks-c-wrapper

./: CMakeLists.txt  LICENSE.txt  README.MD  TODO.txt  clean.sh  crossmake  lm  mm  mmr
cmake/Modules/: FindCXX11.cmake  FindSTEAMWORKS.cmake
src/: CMakeLists.txt  Config.h.in  steam_wrapper.cpp  steam_wrapper.h
